--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
               content="Leveraging Latent Diffusion Models for Training-Free In-Distribution Data Augmentation for Surface Defect Detection. Accepted @ CBMI 2024.">
         <meta name="keywords" content="Diffusion Models, Data Augmentation, Surface Defect Detection.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Diffusion-Based Image Generation for In-Distribution Data Augmentation in Surface Defect Detection</title>
+        <title>Leveraging Latent Diffusion Models for Training-Free In-Distribution Data Augmentation for Surface Defect Detection</title>
 
         <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
               rel="stylesheet">
