Add arXiv, BibTeX, and is-success banner

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </a>
                         <div class="navbar-dropdown">
                           <a class="navbar-item" target="_blank" href="https://intelligolabs.github.io/in_and_out/">
-                            In&Out
+                            In&Out (VISAPP 2024)
                           </a>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                                     </span>
                                     <!-- arXiv link. -->
                                     <span class="link-block">
-                                        <a target="_blank" href="" class="external-link button is-normal is-rounded is-dark">
+                                        <a target="_blank" href="http://arxiv.org/abs/2407.03961" class="external-link button is-normal is-rounded is-dark">
                                             <span class="icon">
                                                 <i class="ai ai-arxiv"></i>
                                             </span>
@@ -123,6 +123,13 @@
                                     </span>
                                 </div>
                             </div>
+
+                            <div class="columns is-centered">
+                                <div class="column has-text-centered">
+                                    <span class="tag is-success is-primary is-large">🎉 Accepted @ CBMI 2024 🎉</span>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -171,7 +178,12 @@
         <section class="section" id="BibTeX">
             <div class="container is-max-desktop content">
                 <h2 class="title">BibTeX</h2>
-<pre><code>TBA.
+<pre><code>@article{girella2024leveraging,
+    title={Leveraging Latent Diffusion Models for Training-Free In-Distribution Data Augmentation for Surface Defect Detection},
+    author={Girella, Federico and Liu, Ziyue and Fummi, Franco and Setti, Francesco and Cristani, Marco and Capogrosso, Luigi},
+    journal={arXiv preprint arXiv:2407.03961},
+    year={2024}
+}
 </code></pre>
             </div>
         </section>
