Add proceeding link and update BibTeX

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 <div class="publication-links">
                                     <!-- Proceedings link. -->
                                     <span class="link-block">
-                                        <a target="_blank" href="" class="external-link button is-normal is-rounded is-dark">
+                                        <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10858875" class="external-link button is-normal is-rounded is-dark">
                                             <span class="icon">
                                                 <i class="fas fa-file-pdf"></i>
                                             </span>
@@ -178,11 +178,12 @@
         <section class="section" id="BibTeX">
             <div class="container is-max-desktop content">
                 <h2 class="title">BibTeX</h2>
-<pre><code>@article{girella2024leveraging,
-    title={Leveraging Latent Diffusion Models for Training-Free In-Distribution Data Augmentation for Surface Defect Detection},
-    author={Girella, Federico and Liu, Ziyue and Fummi, Franco and Setti, Francesco and Cristani, Marco and Capogrosso, Luigi},
-    journal={arXiv preprint arXiv:2407.03961},
-    year={2024}
+<pre><code>@InProceedings{girella2024leveraging,
+    author    = {Girella, Federico and Liu, Ziyue and Fummi, Franco and Setti, Francesco and Cristani, Marco and Capogrosso, Luigi},
+    booktitle = {International Conference on Content-Based Multimedia Indexing (CBMI)},
+    title     = {{Leveraging Latent Diffusion Models for Training-Free in-Distribution Data Augmentation for Surface Defect Detection}},
+    year      = {2024},
+    doi       = {10.1109/cbmi62980.2024.10858875},
 }
 </code></pre>
             </div>
